# collidea-rust

./: Cargo.toml  LICENSE  README.md
src/: collidea.rs  lib.rs
tests/: collidea_test.rs
