[package]
name = "collidea"
version = "0.1.0"
edition = "2021"
authors = ["Saeed Kazemi"]
categories = ["data-structures"]
keywords = ["data-structures", "memory-efficient", "hashmap", "hashset"]
description = "Collision-prone memory-efficient collections"
license = "MIT"
readme = "README.md"
repository = "https://github.com/skazemi/collidea-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
